--- a/composer.json
+++ b/composer.json
@@ -18,18 +18,12 @@
     "require": {
         "php": ">=5.2"
     },
-    "require-dev": {
-        "php": ">=5.5",
-        "phpunit/phpunit": "^4.0"
-    },
     "autoload": {
         "files": [
             "src/string.php"
         ]
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Krak\\String\\Tests\\": "tests"
-        }
+    "require-dev": {
+        "peridot-php/peridot": "^1.18"
     }
 }
